[gd_scene load_steps=7 format=3 uid="uid://yvi0f0dfscop"]

[ext_resource type="PackedScene" uid="uid://cg17ct0rih7uj" path="res://scenes/quack_world/components/health_component.tscn" id="1_538dr"]
[ext_resource type="Script" path="res://scripts/quack_world/player/killer_ducky.gd" id="1_sfpkn"]
[ext_resource type="Texture2D" uid="uid://dqwkmti066fl7" path="res://icon.svg" id="2_fpkh6"]
[ext_resource type="PackedScene" uid="uid://khoqxj40ybw7" path="res://scenes/quack_world/weapons/bullet.tscn" id="2_ha6li"]

[sub_resource type="CircleShape2D" id="CircleShape2D_72oc1"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_o23va"]
radius = 449.071

[node name="KillerDucky" type="Node2D"]
script = ExtResource("1_sfpkn")
bullet_scene = ExtResource("2_ha6li")

[node name="HealthComponent" parent="." instance=ExtResource("1_538dr")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthComponent"]
shape = SubResource("CircleShape2D_72oc1")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.14501, 0.137636)
texture = ExtResource("2_fpkh6")

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_o23va")

[node name="ShotSpawn" type="Marker2D" parent="."]
position = Vector2(22, 0)

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_enemy_detector_body_exited"]
